GNOME Bugzilla – Bug 748603
Fix configure check for libsystemd
Last modified: 2015-05-24 04:28:22 UTC
Add support for building against libsystemd, which has superseded libsystemd-login [1]. We keep a fallback to the old libsystemd-login library though and also keep the name for the configure switch. Also, error out, if libsystemd support is requested but the library could not be found. [1] http://lists.freedesktop.org/archives/systemd-devel/2014-February/017146.html
Created attachment 302532 [details] [review] [PATCH] Fix configure check for libsystemd
Review of attachment 302532 [details] [review]: I guess this was not a problem for other distros because upstream systemd still provides the libsystemd-login compatibility library. Anyway, I'd rather check for just libsystemd, since I doubt anyone will try to build GNOME Disks against older systemd, and I think the value of the slightly cleaner configure.ac outweighs compatibility with distros that will never use newer versions of GNOME Disks.
(In reply to Michael Catanzaro from comment #2) > Review of attachment 302532 [details] [review] [review]: > > I guess this was not a problem for other distros because upstream systemd > still provides the libsystemd-login compatibility library. I guess that most distros still build with --enable-compat-libs indeed. But at least in Debian we want to get rid of them eventually [1] > Anyway, I'd rather check for just libsystemd, since I doubt anyone will try > to build GNOME Disks against older systemd, and I think the value of the > slightly cleaner configure.ac outweighs compatibility with distros that will > never use newer versions of GNOME Disks. Fine with me. I wasn't sure if you care for backports to e.g. RHEL7 which afaik ship with systemd v208, so I chose the least invasive way. Will update the patch as you requested. Cheers, Michael [1] https://bugs.debian.org/cgi-bin/pkgreport.cgi?users=pkg-systemd-maintainers@lists.alioth.debian.org;tag=libsystemd
(In reply to Michael Catanzaro from comment #2) > > Anyway, I'd rather check for just libsystemd, since I doubt anyone will try > to build GNOME Disks against older systemd, and I think the value of the > slightly cleaner configure.ac outweighs compatibility with distros that will > never use newer versions of GNOME Disks. Since the configure switch is currently named --enable-libsystemd-login, should we rename it to --enable-libsystemd then if we are only going to support libsystemd? Along with the defines and automake conditional?
The following fix has been pushed: 22e9380 Migrate from libsystemd-login to libsystemd
Created attachment 303870 [details] [review] Migrate from libsystemd-login to libsystemd Thanks to Michael Biebl for providing an initial patch. http://lists.freedesktop.org/archives/systemd-devel/2014-February/017146.html
(In reply to Michael Biebl from comment #4) > Since the configure switch is currently named --enable-libsystemd-login, > should we rename it to --enable-libsystemd then if we are only going to > support libsystemd? Along with the defines and automake conditional? Sorry, I guess I wasn't checking my email often enough and didn't refresh this page, or I'd have taken you up on that instead of doing it myself. My patch covered all of these, and I tested it with --disable-libsystemd (the flag is renamed) and everything seems to work properly. Let me know if you notice any problems.