Migrate from libsystemd-login to libsystemd

Thanks to Michael Biebl for providing an initial patch.

http://lists.freedesktop.org/archives/systemd-devel/2014-February/017146.html

https://bugzilla.gnome.org/show_bug.cgi?id=748603